[tool.poetry]
name = "autoagora-sidecar"
version = "0.1.0"
authors = [
    "Alexis Asseman <alexis@semiotic.ai>"
]
description = ""
license = ""
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]

[tool.poetry.scripts]
autoagora-sidecar = "autoagora_sidecar.main:main"

[tool.poetry.dependencies]
python = "^3.8"
aio-pika = "^7.1.0"
ConfigArgParse = "^1.5.3"
ratelimitingfilter = "^1.5"
anyio = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry_core>=1.2.0b1",]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
